# Isaacsim_ros2_multi_robots

./: .gitignore
assets/eef/: carrot_finger.usd  peeler.usd
assets/eef/blade/: blade.usd
assets/eef/peeler_base/: peeler_base.usd
assets/eef/stl/: blade.stl  blade_simplified.stl  blade_simplified.usd  carrot_finger.stl  carrot_finger.usd  peeler_base.stl
assets/eef/stl/blade_simplified/: blade_simplified.usd
assets/eef/stl/peeler_base/: peeler_base.usd
assets/environments/: carrot_straight.usd  franka_panda.usd
assets/objects/stl/: carrot_curved.stl  carrot_straight.stl
assets/robots/: franka_edit.usd
src/mtc_tests/: CMakeLists.txt  package.xml
src/mtc_tests/launch/: mtc_tests.launch.py
src/mtc_tests/src/: mtc_grab_node.cpp  mtc_pick_place.cpp
src/panda_bringup/: CMakeLists.txt  package.xml
src/panda_bringup/config/: panda1.ros2_controllers.yaml  panda2.ros2_controllers.yaml  ros2_controllers.yaml
src/panda_bringup/launch/: bringup.launch.py  bringup_dual_setup.launch.py  controllers.launch.py
src/panda_description/: CMakeLists.txt  package.xml
src/panda_description/config/: urdf_parameters.yaml
src/panda_description/launch/: robot_state_publisher.launch.py
src/panda_description/meshes/knife/visual/: mycobot280_knife.dae  mycobot280_knife.stl
src/panda_description/rviz/: panda_description.rviz
src/panda_description/urdf/: dual_panda.urdf.xacro  panda.urdf.xacro
src/panda_description/urdf copy/: panda.urdf.xacro
src/panda_description/urdf copy/control/: panda.ros2_control.xacro  panda_full.ros2_control.xacro  panda_hand.ros2_control.xacro
src/panda_description/urdf copy/mech/: panda.urdf.xacro  peeler.urdf.xacro
src/panda_description/urdf/control/: panda.ros2_control.xacro  panda_full.ros2_control.xacro  panda_hand.ros2_control.xacro
src/panda_description/urdf/mech/: knife.urdf.xacro  panda_arm.urdf.xacro  panda_gripper.urdf.xacro  peeler.urdf.xacro
src/panda_description/usd/: carrot_finger.usd  gripper.usd  peeler.usd
src/panda_moveit_config/: CMakeLists.txt  package.xml
src/panda_moveit_config/config/: panda.srdf  panda.srdf.xacro
src/panda_moveit_config/config copy/: gripper_moveit_controllers.yaml  moveit_controllers.yaml  panda.srdf
src/panda_moveit_config/config/panda1/: gripper_moveit_controllers.yaml  joint_limits.yaml  moveit_controllers.yaml  panda.srdf
src/panda_moveit_config/config/panda1_gripper_panda2_peeler/: gripper_moveit_controllers.yaml  joint_limits.yaml  kinematics.yaml  panda.srdf.xacro  srdf_parameters.yaml
src/panda_moveit_config/config/panda2/: gripper_moveit_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  panda.srdf
src/panda_moveit_config/launch/: move_group.launch.py
src/panda_moveit_config/rviz/: panda_moveit_config.rviz  panda_moveit_config_ns_panda1.rviz  panda_moveit_config_ns_panda2.rviz
